Correction du footer en format desktop (alignement horizontal à droite) Correction de l'animation de hover sur le coeur des restaurant cards

--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@
   margin: 0;
 }
 .restaurant-card-picture__img {
-  border-radius: 20px 20px 0px 0px;
+  border-radius: 20px 20px 0 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
