--- a/sass/layout/_restaurants.scss
+++ b/sass/layout/_restaurants.scss
@@ -39,7 +39,7 @@
   }
 
   &-picture__img {
-    border-radius: 20px 20px 0px 0px;
+    border-radius: 20px 20px 0 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
